# mjolnir-core

./: .appveyor.yml  .clang-format  .clang-tidy  .cmake-format.yaml  .codacy.yml  .codecov.yml  .codespellrc  .cppcheck  .doxyfile  .gitignore  .readthedocs.yaml  .travis.yml  .typo-ci.yml  .typos.toml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  ci_clang.yml  ci_gcc.yml  ci_mingw.yml  ci_msvc.yml  ci_warnings_as_errors.yml  clang_format.yml  clang_tidy.yml  clang_tools.yml  compiletime_and_runtime_analysis.yml  cppcheck.yml  documentation.yml  sonarcloud.yml  static_analysis.yml  version_increased.yml  version_updated.yml  warnings_clang.yml  warnings_gcc.yml  warnings_mingw.yml  warnings_msvc.yml
benchmarks/core/: CMakeLists.txt
benchmarks/core/math/linear_algebra/: CMakeLists.txt  benchmark_determinant.cpp
benchmarks/core/math/linear_algebra/solver/: CMakeLists.txt  benchmark_cramer.cpp
benchmarks/core/memory/: CMakeLists.txt  benchmark_memory_systems.cpp
cmake/: compiler_setup.cmake  configure_core_module.cmake  include_cmake_functions.cmake  resolve_dependencies.cmake
cmake/dependencies/: add_google_benchmark.cmake  add_googletest.cmake
cmake/functions/: add_generic_benchmark.cmake  add_generic_executable.cmake  add_generic_test.cmake  add_mjolnir_benchmark.cmake  add_mjolnir_core_benchmark.cmake  add_mjolnir_core_test.cmake  add_mjolnir_test.cmake  add_to_list_after_keyword.cmake  append_keyword_list.cmake  extract_mjolnir_version_number.cmake  extract_sources_definitions_dependencies.cmake  process_scopes.cmake  target_apply_setup.cmake
core/: CMakeLists.txt
docs/: dev_doc.md  environment.yml  index.md
docs/rtd/: conf.py  dev_doc.md  index.md  index.rst  installation.md
docs/rtd/developers_documentation/: code_quality.md  doxygen_documentation.md
docs/rtd/developers_documentation/linear_algebra/: determinant.md  determinant.rst  linear_algebra.md
docs/source/: conf.py  index.rst
docs/src/: code_quality.md  conf.py  dev_doc.md  installation.md
docs/src/developers_documentation/: code_quality.md  doxygen_documentation.md
docs/src/developers_documentation/linear_algebra/: determinant.md  linear_algebra.md
mjolnir/core/: CMakeLists.txt  hello_world.cpp  test_header.h  test_header_2.h  version.h
python/: check_clang_format_result.py  check_clang_tidy.py  check_cmake_format.py  check_cmake_lint.py  check_valgrind.py  check_version_update.py  environment.yml  format_cmake_files.py  setup.cfg
python/mjolnir/: definitions.py  files.py
scripts/python/: check_clang_format_result.py  check_cmake_format.py  check_version_update.py  environment.yml  run_cmake_format.py  setup.cfg
scripts/python/mjolnir/: definitions.py
src/mjolnir/core/: CMakeLists.txt  concepts.h  definitions.h  exception.h  fundamental_types.h  hello_world.cpp  module.dox  modules.dox  test_header.h  test_header_2.h  version.h
src/mjolnir/core/math/: math.h
src/mjolnir/core/math/linear_algebra/: determinant.h  vector_operations.h  vector_products.h
src/mjolnir/core/math/linear_algebra/solver/: cramer.h
src/mjolnir/core/memory/: definitions.h  linear_memory.h  memory_system_allocator.h  memory_system_deleter.h  stack_memory.h  utility.h
src/mjolnir/core/utility/: alignment.h  bit_operations.h  is_close.h  parameter_pack.h  pointer_operations.h  type.h
src/mjolnir/core/x86/: abs.h  comparison.h  concepts.h  constants.h  definitions.h  direct_access.h  element_summation.h  intrinsics.h  math.h  permutation.h  permute.h  sign_manipulation.h  x86.h
src/mjolnir/testing/: heap_allocation_counter.h  new_delete_counter.h  typed_test_series.h
src/mjolnir/testing/math/: solver_testing.h
src/mjolnir/testing/memory/: memory_test_classes.h
src/mjolnir/testing/x86/: floating_point_vector_register_test_suite.h
tests/: CMakeLists.txt  test_example.cpp
tests/core/: CMakeLists.txt
tests/core/math/: CMakeLists.txt  test_math.cpp
tests/core/math/linear_algebra/: CMakeLists.txt  test_determinant.cpp  test_vector_operations.cpp  test_vector_products.cpp
tests/core/math/linear_algebra/solver/: CMakeLists.txt  test_cramer.cpp
tests/core/memory/: CMakeLists.txt  test_linear_memory.cpp  test_memory_system_allocator.cpp  test_memory_system_deleter.cpp
tests/core/utility/: test_type.cpp
tests/core/x86/: test_direct_access.cpp  test_element_summation.cpp  test_permutation.cpp
tests/math/: test_math.cpp
tests/memory/: CMakeLists.txt  test_linear_memory.cpp  test_stack_memory.cpp
tests/testing/: CMakeLists.txt  test_new_delete_counter.cpp
tests/utility/: CMakeLists.txt  test_alignment.cpp  test_bit_operations.cpp  test_example.cpp  test_is_close.cpp  test_parameter_pack.cpp  test_pointer_operations.cpp  test_type.cpp
tests/x86/: CMakeLists.txt  test_abs.cpp  test_comparison.cpp  test_direct_access.cpp  test_element_summation.cpp  test_math_x86.cpp  test_permutation.cpp  test_permute.cpp  test_sign_manipulation.cpp
